# deskhare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
3th-party/qtautostart/: CMakeLists.txt
3th-party/qtautostart/src/: qtautostart.h  qtautostart_p.cpp  qtautostart_p.h  qtautostart_unix.cpp  qtautostart_win.cpp
3th-party/winqt-shell/: CMakeLists.txt
3th-party/winqt-shell/src/winqt/common/: bits.h  comcontext.h  comobject.cpp  comobject.h  env.cpp  env.h  memory.h  qthelper.h
3th-party/winqt-shell/src/winqt/shell/: iconlocation.cpp  iconlocation.h  knownfolder.cpp  knownfolder.h  shelllink.cpp  shelllink.h
3th-party/winqt-shell/tests/: CMakeLists.txt  env.cpp  env.h
3th-party/xdg-thumbnails-qt/: CMakeLists.txt
3th-party/xdg-thumbnails-qt/src/: xdgthumbnails.cpp  xdgthumbnails.h
3th-party/xdg-thumbnails-qt/tests/: CMakeLists.txt  thumbnails.cpp  thumbnails.h
app/: CMakeLists.txt  flatstyle.cpp  flatstyle.h  listitemdelegate.cpp  listitemdelegate.h  logging.cpp  logging.h  main.cpp  matchlistmodel.cpp  matchlistmodel.h  resources.qrc  searchedit.cpp  searchedit.h  searchwindow.cpp  searchwindow.h  settingsview.cpp  settingsview.h  view.cpp  view.h
app/settings/: appsettings.cpp  appsettings.h  pluginssettingssection.cpp  pluginssettingssection.h  settingswindow.cpp  settingswindow.h
app/widgets/: flowlayout.cpp  flowlayout.h  gridlayoututils.cpp  gridlayoututils.h  switch.cpp  switch.h
cmake/: NSIS.template.in  WinInstall.cmake.in
libdeskhare/: CMakeLists.txt  action.cpp  action.h  actionsource.cpp  actionsource.h  actionsourceplugin.h  controller.cpp  controller.h  evaluationservice.cpp  evaluationservice.h  evaluator.cpp  evaluator.h  match.cpp  match.h  plugin.h  plugincontext.h  pluginmanager.cpp  pluginmanager.h  queriesexecutor.cpp  queriesexecutor.h  query.cpp  query.h  queryresultmodel.cpp  queryresultmodel.h  registry.h  resultset.cpp  resultset.h  settingsproviderregistry.cpp  settingsproviderregistry.h  signals.cpp  signals.h  source.cpp  source.h  sourceplugin.h  sourceregistry.cpp  sourceregistry.h
libdeskhare/actions/: copytextaction.cpp  copytextaction.h  openurlaction.cpp  openurlaction.h  runaction.cpp  runaction.h
libdeskhare/evaluation/: evaluationservice.cpp  evaluationservice.h  similarityevaluator.cpp  similarityevaluator.h
libdeskhare/filesystem/: diriterator.h
libdeskhare/history/: epochtime.h  historyindex.cpp  historyindex.h  historyservice.cpp  historyservice.h
libdeskhare/indexes/: indextimetable.cpp  indextimetable.h  sqliteindex.cpp  sqliteindex.h
libdeskhare/matches/: applicationmatch.cpp  applicationmatch.h  filematch.cpp  filematch.h  genericmatch.cpp  genericmatch.h  textmatch.cpp  textmatch.h
libdeskhare/shell/: defaulticonprovider.cpp  defaulticonprovider.h  fileiconproviderplugin.h  fileiconservice.cpp  fileiconservice.h  iconprovider.h  iconservice.cpp  iconservice.h
libdeskhare/sources/: genericsourcebase.cpp  genericsourcebase.h
libdeskhare/utils/: getenvtext.cpp  getenvtext.h  pluginutils.cpp  pluginutils.h  sharedlock.cpp  sharedlock.h
plugins/: CMakeLists.txt
plugins/calculator/: CMakeLists.txt  calcparser.cpp  calcparser.h  calculatorsource.cpp  calculatorsource.h  plugin.cpp  plugin.h
plugins/calculator/tests/: CMakeLists.txt  parser.cpp  parser.h
plugins/executables/: CMakeLists.txt  executablesindex.cpp  executablesindex.h  executablessource.cpp  executablessource.h  metadata.json  plugin.cpp  plugin.h
plugins/fileindexer/: CMakeLists.txt  fileindex.cpp  fileindex.h  fileindexer.cpp  logging.cpp  logging.h  metadata.json  plugin.cpp  plugin.h
plugins/system-commands/: CMakeLists.txt  metadata.json  plugin.cpp  plugin.h  systemcommands.h  systemcommands_linux.cpp  systemcommandssource.cpp  systemcommandssource.h
plugins/windows/: CMakeLists.txt  windowsfileiconprovider.cpp.bak  winplugin.cpp  winplugin.h
plugins/windows/applications/: startmenusource.cpp  startmenusource.h  winapplicationaction.cpp  winapplicationaction.h  winapplicationsindex.cpp  winapplicationsindex.h
plugins/windows/icons/: winiconprovider.cpp  winiconprovider.h
plugins/xdg/: CMakeLists.txt  applications.cpp  applications.h  linuxlocale.cpp  linuxlocale.h  metadata.json  xdgapplicationaction.cpp  xdgapplicationaction.h  xdgapplicationdesktopfile.cpp  xdgapplicationdesktopfile.h  xdgapplicationmatch.cpp  xdgapplicationmatch.h  xdgapplications.cpp  xdgapplications.h  xdgcommon.cpp  xdgcommon.h  xdgfileiconprovider.cpp  xdgfileiconprovider.h  xdgiconprovider.cpp  xdgiconprovider.h  xdginfocache.cpp  xdginfocache.h  xdgplugin.cpp  xdgplugin.h
plugins/xdg/applications/: xdgapplicationaction.h  xdgapplicationdesktopfile.h  xdgapplications.h
plugins/xdg/bookmarks/: unixdesktopbookmarks.cpp  unixdesktopbookmarks.h
plugins/xdg/parser/: gtk3bookmarksreader.cpp  gtk3bookmarksreader.h  xbelreader.cpp  xbelreader.h
